--- a/package.json
+++ b/package.json
@@ -1,26 +1,72 @@
 {
   "name": "nest-mongo",
   "version": "0.1.0",
-  "description": "A little package for interacting with your MongoDB database",
+  "description": "A wrapper for MongoDB for Nest",
   "main": "dist/index",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "nyc --require ts-node/register mocha **/*.spec.ts --reporter spec",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wbhob/nest-mongo.git"
+  },
+  "homepage": "https://github.com/wbhob/nest-mongo#readme",
+  "author": "Wilson Hobbs",
   "license": "MIT",
+  "keywords": [
+    "nest",
+    "middlewares",
+    "express",
+    "node"
+  ],
+  "bugs": {
+    "url": "https://github.com/wbhob/nest-middlewares/issues"
+  },
   "devDependencies": {
     "@nestjs/common": "^4.4.2",
     "@nestjs/core": "^4.4.2",
     "@nestjs/microservices": "^4.4.1",
     "@nestjs/websockets": "^4.4.1",
+    "@types/chai": "^4.0.5",
+    "@types/mocha": "^2.2.44",
     "@types/mongodb": "^2.2.16",
+    "@types/supertest": "^2.0.4",
+    "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
+    "mocha": "^4.0.1",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.5.2"
+    "rxjs": "^5.5.2",
+    "standard-version": "^4.2.0",
+    "supertest": "^3.0.0",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.6.1"
   },
   "dependencies": {
     "mongodb": "^2.2.33"
   },
   "peerDependencies": {
     "@nestjs/common": "^4.0.0"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "node_modules/",
+      "src/**/*.spec.ts",
+      "src/**/*.d.ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "sourceMap": true,
+    "instrument": true,
+    "all": true
   }
 }
